tests/typechecker/should_pass/enumerated_set_datatype.csp
datatype Z = X.{0..1}.{0..2}

test1 = {| X.0 |} == {X.0.0, X.0.1, X.0.2}
