tests/typechecker/should_fail/ambiguous_datatype.csp
X = {}

datatype D = d.X
